Reconfigured the files to my personal needs, solved issues with svnadmin and the current PHP version.

--- a/apache2_svn.conf
+++ b/apache2_svn.conf
@@ -1,10 +1,10 @@
 <Location /svn>
      DAV svn
-     SVNParentPath /home/svn
+     SVNParentPath /home/svn/repos
      SVNListParentPath On
      AuthType Basic
      AuthName "Subversion Repository"
-     AuthUserFile /etc/subversion/passwd
-     AuthzSVNAccessFile /etc/subversion/subversion-access-control
+     AuthUserFile /home/svn/auth/svn.passwd
+     AuthzSVNAccessFile /home/svn/auth/subversion-access-control.auth
      Require valid-user
  </Location>
