--- a/svnadmin/data/config.tpl.ini
+++ b/svnadmin/data/config.tpl.ini
@@ -55,13 +55,13 @@ UserRoleAssignmentFile=./data/userroleassignments.ini
 [Subversion]
 # The path to your subversion authorization file.
 # It is the file where you configured all your repository permissions for the users.
-SVNAuthFile=/etc/subversion/subversion-access-control
+SVNAuthFile=/home/svn/auth/subversion-access-control.auth
 
 [Repositories:svnclient]
 # The path where all the repositories takes place.
 # Only a local path! (NOT: http:// or svn://)
 # Note: No ending slash (/)!
-SVNParentPath=/home/svn
+SVNParentPath=/home/svn/repos
 
 # Absolute path to your svn.exe executable binary.
 # If your svn directory is on PATH variable the value 'svn.exe' is enough.
@@ -73,7 +73,7 @@ SvnAdminExecutable=/usr/bin/svnadmin
 
 [Users:passwd]
 # The user database file.
-SVNUserFile=/etc/subversion/passwd
+SVNUserFile=/home/svn/auth/svn.passwd
 
 [Users:digest]
 # The user digest database file.
